created nav bar for activity switching

--- a/BT_Updated/app/src/main/res/layout/activity_main.xml
+++ b/BT_Updated/app/src/main/res/layout/activity_main.xml
@@ -5,8 +5,19 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
-    android:padding="16dp"
     tools:context=".MainActivity">
+
+    <androidx.appcompat.widget.Toolbar
+        android:id="@+id/toolbar"
+        android:layout_width="match_parent"
+        android:layout_height="?attr/actionBarSize"
+        android:background="?attr/colorPrimary"
+        app:titleTextColor="@android:color/white"
+        app:popupTheme="@style/ThemeOverlay.AppCompat.Light">
+
+        <include layout="@layout/toolbar_items"/>
+
+    </androidx.appcompat.widget.Toolbar>
 
     <Button
         android:id="@+id/search_button"
