--- a/BT_Updated/app/src/main/res/values/colors.xml
+++ b/BT_Updated/app/src/main/res/values/colors.xml
@@ -8,4 +8,6 @@
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
     <color name="my_red">#FF0000</color>
+    <color name="my_gray">#262626</color>
+    <color name="my_gray_2">#404040</color>
 </resources>
