--- a/BT_Updated/app/src/main/res/layout/activity_workout.xml
+++ b/BT_Updated/app/src/main/res/layout/activity_workout.xml
@@ -13,7 +13,9 @@
         android:layout_height="?attr/actionBarSize"
         android:background="?attr/colorPrimary"
         app:titleTextColor="@android:color/white"
-        app:popupTheme="@style/ThemeOverlay.AppCompat.Light">
+        app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
+        app:contentInsetStart="0dp"
+        app:contentInsetStartWithNavigation="0dp">
 
         <include layout="@layout/toolbar_items"/>
 
