Lepotni popravki+ostalo

--- a/BT_Updated/app/src/main/res/layout/activity_main.xml
+++ b/BT_Updated/app/src/main/res/layout/activity_main.xml
@@ -39,7 +39,8 @@
             android:layout_marginStart="10dp"
             android:layout_marginEnd="10dp"
             android:paddingBottom="10dp"
-            android:background="@color/white">
+            android:background="@drawable/rounded_background"
+            >
 
             <TextView
                 android:layout_width="wrap_content"
@@ -104,7 +105,7 @@
             android:orientation="vertical"
             android:layout_marginStart="10dp"
             android:layout_marginEnd="10dp"
-            android:background="@color/white">
+            android:background="@drawable/rounded_background">
 
             <TextView
                 android:layout_width="wrap_content"
