--- a/BT_Updated/app/src/main/res/values/colors.xml
+++ b/BT_Updated/app/src/main/res/values/colors.xml
@@ -11,4 +11,6 @@
     <color name="my_gray">#262626</color>
     <color name="my_gray_2">#404040</color>
     <color name="my_gray_3">#d9d9d9</color>
+    <color name="lighter_blue">#4682FF</color>
+    <color name="blue">#0000FF</color>
 </resources>
