--- a/BT_Updated/app/src/main/res/values/themes.xml
+++ b/BT_Updated/app/src/main/res/values/themes.xml
@@ -1,6 +1,6 @@
 <resources xmlns:tools="http://schemas.android.com/tools">
     <!-- Base application theme. -->
-    <style name="Theme.BT_simple" parent="Theme.MaterialComponents.DayNight.DarkActionBar">
+    <style name="Theme.BT_simple" parent="Theme.MaterialComponents.DayNight.NoActionBar">
         <!-- Primary brand color. -->
         <item name="colorPrimary">@color/purple_500</item>
         <item name="colorPrimaryVariant">@color/purple_700</item>
@@ -13,5 +13,6 @@
         <item name="android:statusBarColor">?attr/colorPrimaryVariant</item>
         <!-- Customize your theme here. -->
         <item name="colorBackground">@color/my_gray_3</item>
+        <item name="android:windowNoTitle">true</item>
     </style>
 </resources>
