--- a/BT_Updated/app/src/main/res/layout/new_workout.xml
+++ b/BT_Updated/app/src/main/res/layout/new_workout.xml
@@ -8,6 +8,7 @@
     android:background="@drawable/rounded_background">
 
         <TextView
+            android:id="@+id/date"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:text=""
@@ -26,6 +27,7 @@
                 android:padding="5sp">
 
                 <TextView
+                    android:id="@+id/exercise"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:text="Exercise"
@@ -40,6 +42,7 @@
                     android:orientation="horizontal">
 
                     <TextView
+                        android:id="@+id/weight"
                         android:layout_width="0dp"
                         android:layout_height="wrap_content"
                         android:layout_weight="1"
@@ -50,6 +53,7 @@
                         android:textSize="20sp"/>
 
                     <TextView
+                        android:id="@+id/percentage"
                         android:layout_width="0dp"
                         android:layout_height="wrap_content"
                         android:layout_weight="1"
@@ -64,6 +68,7 @@
 
 
                 <TextView
+                    android:id="@+id/comment"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:text="Comment"
@@ -73,6 +78,7 @@
                     android:textSize="20sp"/>
 
                 <TextView
+                    android:id="@+id/peak_velocity"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:text="Peak velocity"
@@ -90,6 +96,7 @@
                 android:padding="5sp">
 
                 <TextView
+                    android:id="@+id/tag"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:text="Tag"
@@ -99,6 +106,7 @@
                     android:textSize="20sp"/>
 
                 <TextView
+                    android:id="@+id/picture"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:text="Tag"
@@ -110,13 +118,5 @@
             </LinearLayout>
 
         </LinearLayout>
-
-
-
-
-
-
-
-
 
 </LinearLayout>
