added percentage circle

--- a/BT_Updated/app/src/main/res/layout/new_lift.xml
+++ b/BT_Updated/app/src/main/res/layout/new_lift.xml
@@ -106,20 +106,25 @@
                     android:layout_margin="2dp"
                     android:background="?attr/colorBackground"
                     android:textSize="20sp"/>
-                <!--
-                                <LinearLayout
-                                    android:layout_width="match_parent"
-                                    android:layout_height="match_parent"
-                                    android:orientation="vertical"
-                                    android:gravity="center">
 
-                                    <View
-                                        android:layout_width="75dp"
-                                        android:layout_height="75dp"
-                                        android:background="@drawable/circle"/>
+                    <LinearLayout
+                        android:layout_width="match_parent"
+                        android:layout_height="match_parent"
+                        android:orientation="vertical"
+                        android:gravity="center">
 
-                                </LinearLayout>
-                -->
+                        <View
+                            android:layout_width="75dp"
+                            android:layout_height="75dp"
+                            android:background="@drawable/circle"/>
+
+                        <TextView
+                            android:id="@+id/percentage_circle"
+                            android:layout_width="match_parent"
+                            android:layout_height="match_parent"/>
+
+                    </LinearLayout>
+
 
             </LinearLayout>
 
