--- a/BT_Updated/app/src/main/res/layout/fragment_settings.xml
+++ b/BT_Updated/app/src/main/res/layout/fragment_settings.xml
@@ -7,7 +7,7 @@
 
     <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_height="match_parent"
         android:orientation="vertical"
         android:background="?attr/colorBackground">
 
@@ -103,9 +103,7 @@
 
 
         </LinearLayout>
-        <View
-            android:layout_width="match_parent"
-            android:layout_height="10dp" />
+
 
     </LinearLayout>
 
