--- a/BT_Updated/app/src/main/res/layout/fragment_workout.xml
+++ b/BT_Updated/app/src/main/res/layout/fragment_workout.xml
@@ -8,32 +8,39 @@
 
     <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_margin="10dp"
+        android:layout_height="match_parent"
+        android:layout_above="@+id/bottom_nav"
         android:orientation="vertical">
 
-        <Button
-            android:id="@+id/new_workout"
+        <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:text="@string/new_workout"
-            android:background="@color/lighter_blue"
-            android:textColor="@color/white"
-            android:textSize="20sp"/>
+            android:layout_margin="10dp"
+            android:orientation="vertical">
 
-    </LinearLayout>
+            <androidx.appcompat.widget.AppCompatButton
+                android:id="@+id/new_workout"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:text="@string/new_workout"
+                android:background="@color/lighter_blue"
+                android:textColor="@color/white"
+                android:textSize="20sp"/>
 
-    <ScrollView
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content">
+        </LinearLayout>
 
-        <LinearLayout
-            android:id="@+id/workouts_layout"
+        <ScrollView
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:orientation="vertical"/>
+            android:layout_height="match_parent">
 
-    </ScrollView>
+            <LinearLayout
+                android:id="@+id/workouts_layout"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:orientation="vertical"/>
+
+        </ScrollView>
+    </LinearLayout>
 
     <LinearLayout
         android:id="@+id/bottom_nav"
@@ -48,10 +55,10 @@
         <LinearLayout
             android:id="@+id/bluetooth_icon"
             android:layout_width="wrap_content"
-            android:layout_height="wrap_content">
+            android:layout_height="wrap_content"
+            android:orientation="horizontal">
 
         </LinearLayout>
-
 
         <TextView
             android:id="@+id/bluetooth_connection"
@@ -73,10 +80,5 @@
             android:textColor="@color/white"
             android:textSize="16sp" />
 
-
     </LinearLayout>
-
-
-
-
 </RelativeLayout>
