--- a/BT_Updated/app/src/main/res/layout/fragment_settings.xml
+++ b/BT_Updated/app/src/main/res/layout/fragment_settings.xml
@@ -76,9 +76,9 @@
                 android:layout_marginEnd="10dp"
                 android:layout_weight="1"
                 android:background="@color/lighter_blue"
-                android:textColor="@color/white"
-                android:divider="@color/white"
-                android:dividerHeight="1dp" />
+                android:divider="@android:color/darker_gray"
+                android:dividerHeight="1dp"/>
+
         </LinearLayout>
         <!--
         <LinearLayout
